icon-paragraph: fix alignment

--- a/style/blocks/_icon-paragraph.scss
+++ b/style/blocks/_icon-paragraph.scss
@@ -2,6 +2,34 @@
     display: flex;
     margin-top: 15px;
     margin-bottom: 15px;
+
+    &[style="text-align:right"] {
+        .wp-block-svbk-icon-paragraph__icon {
+            order: 1;
+        }
+
+        .wp-block-svbk-icon-paragraph__content {
+            order: 0;
+        }
+
+        .wp-block-svbk-icon-paragraph__icon {
+            margin-right: 0;
+            margin-left: .65em;
+        }
+    }
+
+    &[style="text-align:center"] {
+        display: block;
+
+        .wp-block-svbk-icon-paragraph__icon {
+            display: block;
+            margin: 0 0 5px;
+            
+            svg {
+                margin: 0 auto;
+            }
+        }
+    }
 }
 
 .wp-block-svbk-icon-paragraph__icon {
